# ChangeLog for app-emacs/anything
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*anything-9999 (03 Oct 2011)
*anything-1.3.1 (03 Oct 2011)

  03 Oct 2011; Ulrich Mueller <ulm@gentoo.org> +files/50anything-gentoo.el,
  +anything-1.3.1.ebuild, -anything-1.189.ebuild, -anything-1.227.ebuild,
  +anything-9999.ebuild, metadata.xml:
  Version bump, bug 385407. New ebuild contributed by Tom Prince
  <tom.prince@ualberta.net>, with modifications by me.

*anything-1.227 (25 Dec 2009)

  25 Dec 2009; Ulrich Mueller <ulm@gentoo.org> +anything-1.227.ebuild:
  Version bump.

  04 Jun 2009; Ulrich Mueller <ulm@gentoo.org> anything-1.189.ebuild:
  Fix DESCRIPTION.

*anything-1.189 (03 Jun 2009)

  03 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  +anything-1.189.ebuild, +metadata.xml:
  initial commit
