@@ -2,15 +2,13 @@
 Hash: SHA1
 
 AUX 50anything-gentoo.el 83 RMD160 b8c15d1bd9409bdeb235e2da7b488830d9f454e9 SHA1 de35f2b63f2becf168b856e95693828bf9e9c9fc SHA256 a90a77777877be6cb72a1fdaf047673f6be15095297646b7c79a886af0a3af61
-DIST anything-1.3.1.tar.gz 2161044 RMD160 7c5e3a9bdf78e40fdbd8b8a10a9e47fd0672372f SHA1 6a7946aeab106d44f9f8838135f9f1e64ff3caaf SHA256 17446b738a1f94e4afbae363a18c0fadb86fb65cf10c3bb9c53f1cbdd4817325
-EBUILD anything-1.3.1.ebuild 1026 RMD160 cc53e825436c5c21d657f701c2b519a6b8961420 SHA1 36cd10e64fc53019ece919c8a99a9fb958b20f58 SHA256 7ec3e0e8e33725ae7b7b04b3e4501331c6d05a8105bd0570c6b10e882e300287
 EBUILD anything-9999.ebuild 1026 RMD160 cc53e825436c5c21d657f701c2b519a6b8961420 SHA1 36cd10e64fc53019ece919c8a99a9fb958b20f58 SHA256 7ec3e0e8e33725ae7b7b04b3e4501331c6d05a8105bd0570c6b10e882e300287
-MISC ChangeLog 843 RMD160 aabe4e2138d16df3bd0f326d834c8068a8e656c5 SHA1 101b2dfa17e342afd48c007abc3fc599c24d99f0 SHA256 26af86b2136db2adea433754a8d56a57a7b701f81b35805dce7f1281e4bc6df8
+MISC ChangeLog 989 RMD160 6c47d82c22c4ff05b0b61446ae19884fbc77adb0 SHA1 be8d33705de8e8fd1effd71c4509e00f681b57ac SHA256 04c261eba7149a737fb1c36ffb12a46b96e74166fbe6ca9019c5cc04a544f370
 MISC metadata.xml 232 RMD160 70eebfd8d8cbbc042f9bbaa72004319995ff3d09 SHA1 4044a4d7a495cf5a4ba61cecbe58512cd77fedc5 SHA256 645c2a69169bfc33ebd18c427d6b6800ccf6015dda8dd5456a9e5dbe7a3033bc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk6J7isACgkQOeoy/oIi7uyCgACg1OokBKHwp2lHQwdyaED/d2zB
-E3QAoMNQcgKSY+ZwcN9bc9BDQ2+YbCSL
-=NUbV
+iEYEARECAAYFAk6UptUACgkQOeoy/oIi7uwsugCfZh6jXoBB0fk8FCbIGJviE7mV
+75gAoIK/bmKdHU0xvNYdzUHt0LF9MFhY
+=iKUt
 -----END PGP SIGNATURE-----
